[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skglm"
description = "A fast and modular scikit-learn replacement for generalized linear models"
authors = [
    {name = "Mathurin Massias", email = "mathurin.massias@gmail.com"},
    {name = "Badr Moufad", email = "badr.moufad@emines.um6p.ma"},
    {name = "Pierre-Antoine Bannier", email = "pierreantoine.bannier@gmail.com"},
    {name = "Quentin Bertrand", email = "quentin.bertrand@mila.quebec"},
    {name = "Quentin Klopfenstein", email = "quentin.klopfenstein@uni.lu"}
]
license = {text = "BSD (3-Clause)"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "numpy>=1.12",
    "numba",
    "scikit-learn>=1.0",
    "scipy>=0.18.0",
]
dynamic = ["version"]


[tool.setuptools.dynamic]
version = {attr = "skglm.__version__"}


[project.urls]
Homepage = "https://contrib.scikit-learn.org/skglm"
Source = "https://github.com/scikit-learn-contrib/skglm.git"


[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "coverage",
    "numpydoc,"
]

doc = [
    "benchopt",
    "libsvmdata>=0.2",
    "matplotlib>=2.0.0",
    "myst_parser",
    "numpydoc",
    "pillow",
    "sphinx-bootstrap-theme",
    "sphinx_copybutton",
    "sphinx-gallery",
    "pytest",
    "furo",
    "lifelines"
]
